SUBDIRS = libgtkhtml tests docs

EXTRA_DIST = TODO COPYING.LIB libgtkhtml-2.0.pc.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = libgtkhtml-2.0.pc

MAINTAINERCLEANFILES =		\
	Makefile.in		\
	aclocal.m4		\
	config.guess		\
	config.h.in		\
	config.sub		\
	configure		\
	depcomp			\
	install-sh		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	libtool			\
	ltmain.sh		\
	missing

