
EXTRA_DIST =			\
	acid.html		\
	alex.html		\
	andersca.html		\
	css-support.html	\
	dbaron-status.html	\
	domtest.xhtml		\
	flerp.xhtml		\
	floats.html		\
	freshmeat.html		\
	gtk.themes.html		\
	gtkwidget.html		\
	jborg.html		\
	linux.com.html		\
	logo.png		\
	mixmagic.html		\
	mozilla.html		\
	position.html		\
	slashdot.html		\
	table.html		\
	tables.html		\
	test1.html		\
	test2.css		\
	test2.html		\
	test3.html		\
	test4.html		\
	test5.html		\
	test6.html		\
	test7.html		\
	test8.html		\
	test9.html		\
	themes.html

MAINTAINERCLEANFILES =		\
	Makefile.in
